Correct used platform

--- a/examples/arduino-wifiscan/platformio.ini
+++ b/examples/arduino-wifiscan/platformio.ini
@@ -9,7 +9,7 @@
 
 
 [env]
-platform = renesas
+platform = renesas-ra
 framework = arduino
 monitor_speed = 115200
 ; needed for WiFi sublibraries to be found correctly
