--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -13,6 +13,7 @@ jobs:
           - "examples/arduino-internal-libs"
           - "examples/arduino-uno-r4-led-animation"
           - "examples/arduino-wifiscan"
+          - "examples/cmsis-blink"
           - "examples/fsp-blink"
           - "examples/fsp-button-isr"
     runs-on: ${{ matrix.os }}
