Add FSP and CMSIS framework, more examples (#7)
* Add support for native FSP framework
* Add support for CMSIS framework

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -11,6 +11,11 @@ jobs:
         example:
           - "examples/arduino-blink"
           - "examples/arduino-internal-libs"
+          - "examples/arduino-uno-r4-led-animation"
+          - "examples/arduino-wifiscan"
+          - "examples/cmsis-blink"
+          - "examples/fsp-blink"
+          - "examples/fsp-button-isr"
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
